# RMA

./: Cargo.toml  README
src/: file_reader.rs  gpu_utils.rs  infini_attention_gpu.rs  main.rs  tokenizer.rs
target 2/: .rustc_info.json
target 2/release/: infini_attention_demo.d
target 2/release/.fingerprint/anstyle-8ef01f582d6363ef/: lib-anstyle.json
target 2/release/.fingerprint/anstyle-parse-0914f99ebfb011d8/: lib-anstyle_parse  lib-anstyle_parse.json
target 2/release/.fingerprint/anstyle-query-25d18fd563429e08/: lib-anstyle_query.json
target 2/release/.fingerprint/anyhow-359cc46dc27c3069/: build-script-build-script-build.json
target 2/release/.fingerprint/anyhow-c25378d5126f1197/: lib-anyhow  lib-anyhow.json
target 2/release/.fingerprint/autocfg-96b95db754ad4a81/: lib-autocfg.json
target 2/release/.fingerprint/byteorder-3d339f46b2f02f07/: lib-byteorder.json
target 2/release/.fingerprint/cfg-if-cf95b8bd3216a329/: lib-cfg_if.json
target 2/release/.fingerprint/clap-452e24f30f5adf82/: lib-clap
target 2/release/.fingerprint/clap_derive-fb5ca18f045eb204/: lib-clap_derive  lib-clap_derive.json
target 2/release/.fingerprint/clap_lex-78da8be6aebd6b59/: lib-clap_lex.json
target 2/release/.fingerprint/colorchoice-ed5aad42d2f9c0e9/: lib-colorchoice
target 2/release/.fingerprint/heck-e85d374b0c6329e5/: lib-heck
target 2/release/.fingerprint/infini_attention_demo-521bd91319c96966/: dep-bin-infini_attention_demo  output-bin-infini_attention_demo  output-bin-infini_attention_demo 2
target 3/: .rustc_info.json
target 3/release/: infini_attention_demo
(+87 files in other folders)
