[package]
name = "infini_attention_gpu_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
futures-intrusive = "0.5.0"
bytemuck = "1.14"
wgpu = "23.0.1"
ndarray = "0.16.1"
ndarray-rand = "0.15"
rand = "0.8"
pdf = "0.9.0" # if needed for PDF reading, or system calls to pdftotext
# ^ Not strictly needed unless you parse PDFs directly in Rust. We do system calls instead in file_reader.